--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -220,9 +220,9 @@
     "                    print(STT,\" .\",feature + \" are playing into current \" + target + \" Rate\" \" :  \",(1-p)*100,\"%\")\n",
     "            else :\n",
     "                if HT ==1:\n",
-    "                    print(STT,\" .\",target + \" are not playing into current \" + feature + \" Rate\" \" :  \",(1-p)*100,\"%\")\n",
+    "                    print(STT,\" .\",target + \" are not playing into current \" + feature + \" Rate\" \" :  \",(p)*100,\"%\")\n",
     "                else:\n",
-    "                    print(STT,\" .\",feature + \" are not playing into current \" + target + \" Rate\" \" :  \",(1-p)*100,\"%\")\n",
+    "                    print(STT,\" .\",feature + \" are not playing into current \" + target + \" Rate\" \" :  \",(p)*100,\"%\")\n",
     "        if len(sample) > 2 and not_32==0:# có nhiều hơn 2 thuộc tính xét các cặp nếu 1 cặp khác nhau thì khác nhau\n",
     "            khac=0\n",
     "            for i in range(len(sample)-1):\n",
@@ -237,9 +237,9 @@
     "                    print(STT,\" .\",feature + \" are playing into current \" + target + \" Rate\" \" :  \",(1-p)*100,\"%\")\n",
     "            else :\n",
     "                if HT ==1:\n",
-    "                    print(STT,\" .\",target + \" are not playing into current \" + feature + \" Rate\" \" :  \",(1-p)*100,\"%\")\n",
+    "                    print(STT,\" .\",target + \" are not playing into current \" + feature + \" Rate\" \" :  \",(p)*100,\"%\")\n",
     "                else:\n",
-    "                    print(STT,\" .\",feature + \" are not playing into current \" + target + \" Rate\" \" :  \",(1-p)*100,\"%\")"
+    "                    print(STT,\" .\",feature + \" are not playing into current \" + target + \" Rate\" \" :  \",(p)*100,\"%\")"
    ]
   },
   {
